  . Fixed bug GH-10437 (Segfault/assertion when using fibers in shutdown
    function after bailout). (trowski)

- Date:
  . Fix GH-10447 ('p' format specifier does not yield 'Z' for 00:00). (Derick)

- FFI:
  . Fixed incorrect bitshifting and masking in ffi bitfield. (nielsdos)

- FPM:
  . Fixed bug GH-10315 (FPM unknown child alert not valid). (Jakub Zelenka)

- Opcache:
  . Fix incorrect page_size check. (nielsdos)

- Phar:
  . Fix incorrect check in phar tar parsing. (nielsdos)

- Standard:
  . Fixed bug GH-10292 (Made the default value of the first param of srand() and
    mt_srand() unknown). (kocsismate)
  . Fix incorrect check in cs_8559_5 in map_from_unicode(). (nielsdos)
  . Fix bug GH-9697 for reset/end/next/prev() attempting to move pointer of
    properties table for certain internal classes such as FFI classes

02 Feb 2023, PHP 8.1.15

- Apache:
  . Fixed bug GH-9949 (Partial content on incomplete POST request). (cmb)

- Core:
  . Fixed bug GH-10072 (PHP crashes when execute_ex is overridden and a __call
    trampoline is used from internal code). (Derick)
  . Fix GH-10251 (Assertion `(flag & (1<<3)) == 0' failed). (nielsdos)
  . Fix wrong comparison in block optimisation pass after opcode update. (nieldsdos)
  . Fix GH-10248 (Assertion `!(zval_get_type(&(*(property))) == 10)' failed).
    (nielsdos)

- Date:
  . Fixed bug GH-9891 (DateTime modify with unixtimestamp (@) must work like
    setTimestamp). (Derick)
  . Fixed bug GH-10218 (DateTimeZone fails to parse time zones that contain the
    "+" character). (Derick)

- Fiber:
  . Fix assertion on stack allocation size. (nielsdos)

- FPM:
  . Fixed bug GH-9981 (FPM does not reset fastcgi.error_header).
    (Jakub Zelenka)
  . Fixed bug #67244 (Wrong owner:group for listening unix socket).
    (Jakub Zelenka)

- Hash:
  . Handle exceptions from __toString in XXH3's initialization (nielsdos)

- LDAP:
  . Fixed bug GH-10112 (LDAP\Connection::__construct() refers to ldap_create()).
    (cmb)
